--- a/make_playlist/pubspec.yaml
+++ b/make_playlist/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
 
+  flutter_inappwebview: ^6.1.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
